[metadata]
name = deploy_tool
version = 1.0.0
author = asposh
url = https://github.com/asposh/deploy_tool
description = Tool for deploy
license = Apache-2.0 License 

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    psycopg2-binary >= 2.9

[options.packages.find]
where = src
